<resources>
    <string name="app_name">My Application</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="codenow">Code Now</string>
    <string name="mlearning">Machine Learning</string>
    <string name="c_input">Camera Input</string>
    <string name="i_input">Image Input</string>
    <string name="offline">Offline Mode</string>
    <string name="feedback">Feedback</string>
    <string name="title_activity_navigational_drawer">navigationalDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Drioditor</string>
    <string name="nav_header_subtitle">manoharmadanu@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_note_select">NoteSelect</string>
</resources>
