<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile"
        android:orderInCategory="100"
        android:title="@string/profile"/>
    <item
        android:id="@+id/codenow"
        android:orderInCategory="100"
        android:title="@string/codenow"/>
    <item
        android:id="@+id/mlearning"
        android:orderInCategory="100"
        android:title="@string/mlearning"/>
    <item
        android:id="@+id/c_input"
        android:orderInCategory="100"
        android:title="@string/c_input"/>
    <item
        android:id="@+id/i_input"
        android:orderInCategory="100"
        android:title="@string/i_input"/>
    <item
        android:id="@+id/offline"
        android:orderInCategory="100"
        android:title="@string/offline"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"/>
    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:title="@string/help"/>
    <item
        android:id="@+id/feedback"
        android:orderInCategory="100"
        android:title="@string/feedback"/>
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/exit"/>
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"/>
</menu>